# vite-plugin-wasm-pack

./: .eslintrc.js  .gitignore  README.md  README_ZH.md  package-lock.json  package.json  tsconfig.json
example/: package-lock.json  package.json  vite.config.js
example/my_crate/: Cargo.toml
example/my_crate/src/: lib.rs
example/src/: main.js
src/: index.ts  lib.ts  plugin.ts  types.ts
