[package]
name = "rust-webassembly-entry-dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.56"
web-sys = { version="0.3.56", features=[ "console", "Document", "Window", "HtmlElement" ] }

# 调试工具
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc`是wasm的一个很小的分配器
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
# 告诉 `rustc` 优化代码尺寸
opt-level = "s"
